Add company entity support (#118)
* Add types

* OpenAPI definition

* Add type

* Add db handling

* Service layer for company

* Add company to audit logging

* openapi spec

* http handler

* Misc fixes

* Add apps field to api response

* Add tests

* add change status test

* fix typos
