# openapi/gatekeeper.yaml
@@ -11,13 +11,15 @@ tags:
     description: intro here.
 
   - name: Organization
-    description: Operations on organization.
+    description: Operations on organizations.
   - name: Developer
     description: Operations on developers.
   - name: Application
     description: Operations on applications.
   - name: Key
     description: Operations on keys.
+  - name: Company
+    description: Operations on companies.
   - name: APIProduct
     description: Operations on APIProducts.
 
@@ -49,6 +51,7 @@ x-tagGroups:
       - Developer
       - Application
       - Key
+      - Company
       - APIProduct
       - HTTP
       - Listener
@@ -1230,6 +1233,228 @@ paths:
         '404':
           $ref: '#/components/responses/AttributeDoesNotExist'
 
+  /v1/organizations/{organization_name}/companies:
+    get:
+      summary: Retrieve companies
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - name: expand
+          in: query
+          description: Return full companies details.
+          required: false
+          schema:
+            type: boolean
+        - name: count
+          in: query
+          description: maximum number of companies to return.
+          required: false
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successfully retrieved all companies.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Companies'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+    post:
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+      summary: Create company
+      tags:
+        - Company
+      requestBody:
+        description: Details of company to create.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Company'
+      responses:
+        '201':
+          description: Successfully created company.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Company'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+  /v1/organizations/{organization_name}/companies/{company_name}:
+    get:
+      summary: Retrieve company
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+      responses:
+        '200':
+          description: Succesfully retrieved company.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Company'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Company to retrieve does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    post:
+      summary: Update company
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+        - $ref: '#/components/parameters/action'
+      requestBody:
+        description: Details of company to update.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Company'
+          application/octet-stream:
+            schema:
+              type: string
+      responses:
+        '200':
+          description: Succesfully updated company.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Company'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Company to update does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    delete:
+      summary: Delete company
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+      responses:
+        '200':
+          description: Succesfully deleted company.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Company'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Company to delete does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+  /v1/organizations/{organization_name}/companies/{company_name}/attributes:
+    get:
+      summary: Retrieve company attributes
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+      responses:
+        '200':
+          $ref: '#/components/responses/AttributesRetrieved'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Company to replace all attributes from does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+    post:
+      summary: Replace company attributes
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+      requestBody:
+        description: Details of new attributes.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Attributes'
+      responses:
+        '200':
+          $ref: '#/components/responses/AttributesUpdated'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          description: Company to update does not exist.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
+  /v1/organizations/{organization_name}/companies/{company_name}/attributes/{attribute_name}:
+    get:
+      summary: Retrieve company attribute
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+        - $ref: '#/components/parameters/attribute_name'
+      responses:
+        '200':
+          $ref: '#/components/responses/AttributeRetrieved'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/AttributeDoesNotExist'
+    post:
+      summary: Update company attribute
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+        - $ref: '#/components/parameters/attribute_name'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Attribute'
+      responses:
+        '200':
+          $ref: '#/components/responses/AttributeUpdated'
+        '201':
+          $ref: '#/components/responses/AttributeCreated'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/AttributeDoesNotExist'
+    delete:
+      summary: Delete company attribute
+      tags:
+        - Company
+      parameters:
+        - $ref: '#/components/parameters/organization_name'
+        - $ref: '#/components/parameters/company_name'
+        - $ref: '#/components/parameters/attribute_name'
+      responses:
+        '200':
+          $ref: '#/components/responses/AttributeDeleted'
+        '404':
+          $ref: '#/components/responses/AttributeDoesNotExist'
+
   /v1/listeners:
     get:
       summary: Retrieve listeners
@@ -2264,6 +2489,14 @@ components:
         type: string
       description: Name of attribute.
 
+    company_name:
+      name: company_name
+      in: path
+      required: true
+      schema:
+        type: string
+      description: Name of company.
+
     consumer_key:
       name: consumer_key
       in: path
@@ -2825,6 +3058,57 @@ components:
           items:
             $ref: "#/components/schemas/Route"
       description: Details of all routes.
+
+    Company:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of company.
+        displayName:
+          type: string
+          description: Display name of company.
+        apps:
+          type: array
+          items:
+            type: string
+          description: List of application names this company has. (retrieve only)
+        attributes:
+          type: array
+          items:
+            $ref: "#/components/schemas/Attribute"
+        status:
+          type: string
+          description: Status of company. Can be 'active' or 'inactive'.
+        organizationName:
+          type: string
+          description: Name of organization. (retrieve only)
+        createdAt:
+          type: integer
+          format: int64
+          readOnly: true
+          description: Create timestamp in milliseconds since epoch.
+        createdBy:
+          type: string
+          readOnly: true
+          description: User who created this developer.
+        lastModifiedAt:
+          type: integer
+          format: int64
+          readOnly: true
+          description: Last modified timestamp in milliseconds since epoch.
+        lastModifiedBy:
+          type: string
+          readOnly: true
+          description: User who last updated this developer.
+    Companies:
+      type: object
+      properties:
+        company:
+          type: array
+          items:
+            $ref: "#/components/schemas/Company"
+      description: Details of all companies.
 
     Cluster:
       type: object
